# rs-cmdb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.CI  LICENSE  Makefile  README.md  README_CN.md  TESTING.md  TODO.md  client.template.toml
.github/workflows/: ci.yml  test.yml
client/: Cargo.toml  README.md
client/config/: client.toml.bak
client/src/: main.rs
client/src/collector/: linux_collector.rs  linux_cpu.rs  linux_disk.rs  linux_gpu.rs  linux_ipmi.rs  linux_nic.rs  linux_ram.rs  mod.rs
client/src/config/: mod.rs
client/src/display/: mod.rs
client/src/service/: mod.rs  pull_service.rs  push_service.rs
client/src/tests/: collector_tests.rs  config_tests.rs  mod.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs  models.rs
common/src/entity/: dictionary.rs  hardware.rs  mod.rs  user.rs
config/: default.toml
front/: Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  build.rs  index.html  input.css  package-lock.json  package.json
front/assets/css/: app.css
front/src/: app.rs  icons.rs  main.rs  routes.rs
front/src/components/: change_password_modal.rs  chart.rs  client_card.rs  client_edit_modal.rs  error.rs  hardware_history.rs  hardware_info.rs  layout.rs  loading.rs  mod.rs  notification.rs  permission_guard.rs  search_filter.rs  stats_filter.rs
front/src/components/common/: mod.rs  pagination.rs
front/src/components/dashboard/: client_status_list.rs  mod.rs  os_dist_card.rs  recent_clients_card.rs  stats_card.rs  system_status_card.rs
front/src/components/ui/: badge.rs  button.rs  card.rs  checkbox.rs  confirm_modal.rs  input.rs  mod.rs  modal.rs  select.rs  table.rs  table_action.rs
front/src/hooks/: mod.rs  use_trans.rs
front/src/i18n/: en_us.rs  mod.rs  zh_cn.rs
front/src/pages/: analytics.rs  client_detail.rs  client_setup.rs  components.rs  dictionaries.rs  home.rs  login.rs  mod.rs  not_found.rs  persons.rs  projects.rs  racks.rs
front/src/pages/clients/: filters.rs  mod.rs  state.rs  utils.rs
front/src/pages/clients/components/: mod.rs  page.rs  search_bar.rs  statistics.rs  table.rs
front/src/pages/components/: batch_form.rs  form.rs  import_export.rs  mod.rs  page.rs
front/src/pages/settings/: change_password.rs  mod.rs  users.rs
front/src/services/: api.rs  component.rs  mod.rs  person.rs  project.rs
front/src/stores/: auth_store.rs  language_store.rs  mod.rs  theme.rs
front/src/types/: mod.rs
front/src/utils/: export.rs  format.rs  i18n_helper.rs  mod.rs
scripts/: README.md  README_CN.md  generate_hardware_changes.py  generate_test_data.py  import_test_data.py
server/: Cargo.toml
server/src/: constants.rs  main.rs
server/src/api/: auth_api.rs  client_api.rs  component_api.rs  dictionary_api.rs  download_api.rs  hardware_api.rs  health_api.rs  mod.rs  person_api.rs  project_api.rs  rack_api.rs  stats_api.rs  user_api.rs
server/src/cache/: cache_service.rs  cached_repository.rs  mod.rs
server/src/config/: mod.rs
server/src/dao/: client_dao.rs  mod.rs  rack_dao.rs
server/src/db/: mod.rs  redb_store.rs
server/src/i18n/: language.rs  mod.rs
server/src/i18n/locales/: en_us.rs  mod.rs  zh_cn.rs
server/src/middleware/: auth.rs  mod.rs  rate_limit.rs  rbac.rs
server/src/queue/: message_queue.rs  mock_queue.rs  mod.rs
server/src/repository/: client_repository.rs  component_repository.rs  dictionary_repository.rs  hardware_repository.rs  mod.rs  person_repository.rs  project_repository.rs  rack_repository.rs  user_repository.rs
server/src/service/: auth_service.rs  client_filter_service.rs  client_service.rs  component_service.rs  export_service.rs  hardware_service.rs  message_processor.rs  mod.rs  stats_service.rs  validation_service.rs
server/src/tests/: api_tests.rs  error_tests.rs  integration_tests.rs  mod.rs
server/src/tests/fixtures/: mod.rs
server/src/validation/: input_validation.rs  mod.rs
