[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tokio-test = "0.4"

[dependencies]
sysinfo = "0.35.1"
common = { path = "../common" }
hex = "0.4.3"
log = "0.4"
env_logger = "0.11.8"
tokio = { version = "1.45.0", features = ["full"] }
config = { version = "0.15.11", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1.16.0", features = ["v4", "serde", "js"] }
clap = { version = "4.5.2", features = ["derive"] }
once_cell = "1.19.0"
tokio-cron-scheduler = "0.14.0"
toml = "0.8.8"
libc = "0.2"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2"
ipnet = "2.11"

[lints.rust]
unused = "allow"
dead_code = "allow"

[lints.clippy]
enum_variant_names = "allow"
large_enum_variant = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
absurd_extreme_comparisons = "allow"
wrong_self_convention = "allow"
module_inception = "allow"
if_same_then_else = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
derivable_impls = "allow"
redundant_closure = "allow"
needless_range_loop = "allow"
manual_ok_err = "allow"
unnecessary_cast = "allow"
manual_strip = "allow"
field_reassign_with_default = "allow"
redundant_field_names = "allow"
empty_line_after_doc_comments = "allow"
lines_filter_map_ok = "allow"

[[bin]]
name = "rs-cmdb-client"
path = "src/main.rs"
