[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.45.0", features = ["full"] }
axum = { version = "0.8.4", features = ["json"] }
axum-macros = "0.5.0"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.4", features = ["trace", "cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
redb = "2.5.0"
flume = "0.11.0"
thiserror = "2.0.12"
chrono = { version = "0.4.31", features = ["serde"] }
async-trait = "0.1.77"
log = "0.4.20"
env_logger = "0.11.8"
dotenvy = "0.15.7"
config = "0.15.11"
once_cell = "1.19.0"
tokio-cron-scheduler = "0.14.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.100"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
argon2 = "0.5.3"
axum-extra = { version = "0.12.2", features = ["typed-header"] }

[[bin]]
name = "rs-cmdb-server"
path = "src/main.rs"
