[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
mockall = "0.13"
cargo-llvm-cov = "0.6"
rand = "0.8"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.45.0", features = ["full"] }
axum = { version = "0.8.4", features = ["json"] }
axum-macros = "0.5.0"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.4", features = ["trace", "cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
redb = "2.5.0"
flume = "0.11.0"
thiserror = "2.0.12"
chrono = { version = "0.4.31", features = ["serde"] }
async-trait = "0.1.77"
log = "0.4.20"
env_logger = "0.11.8"
dotenvy = "0.15.7"
config = "0.15.11"
once_cell = "1.19.0"
tokio-cron-scheduler = "0.14.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.100"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
argon2 = "0.5.3"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
futures = "0.3"
governor = "0.7.0"
rpassword = "7.3"
moka = { version = "0.12", features = ["future"] }
ipnet = "2.9"

[lints.rust]
unused = "allow"
dead_code = "allow"

[lints.clippy]
enum_variant_names = "allow"
large_enum_variant = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
absurd_extreme_comparisons = "allow"
wrong_self_convention = "allow"
module_inception = "allow"
if_same_then_else = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
derivable_impls = "allow"
redundant_closure = "allow"
needless_range_loop = "allow"
manual_ok_err = "allow"
unnecessary_cast = "allow"
manual_strip = "allow"
field_reassign_with_default = "allow"
redundant_field_names = "allow"
empty_line_after_doc_comments = "allow"
[[bin]]
name = "rs-cmdb-server"
path = "src/main.rs"
